welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:10: error: ';' expected but ')' found.
  for(ht <- 1 to 8){avance()})
                             ^